Fix margins on mobile.

--- a/css/main.css
+++ b/css/main.css
@@ -47,6 +47,11 @@ select {
     font-size: 1.5em;
     margin: 0 1%;
   }
+
+  .container {
+    margin: 0 8%;
+  }
+
   h1 { font-size: 2em; }
 }
 
